2005-01-08  Paolo Maggi  <paolo@gnome.org>

	* dialogs/gedit-preferences-dialog.c
	(highlight_current_line_checkbutton_toggled) (setup_view_page)
	(get_preferences_dialog): added new "Highlight Current Line" option

	* dialogs/gedit-preferences.glade2: ditto

	* gedit-prefs-manager-app.c (gedit_prefs_manager_app_init)
	(gedit_prefs_manager_hl_current_line_changed): ditto

	* gedit-prefs-manager.c: ditto

	* gedit-prefs-manager.h: ditto

	* gedit-view.c (gedit_view_init): ditto


2005-01-07  Paolo Maggi  <paolo@gnome.org>

	* gedit-commands.c (gedit_cmd_help_about): replace "translator_credits" with
	"translator-credits" (as requested in bug #150106:Modules should use 
	"translator-credits" intead of "translator_credits"). Added comment for 
	translators.

2004-12-13  Paolo Maggi  <paolo@gnome.org>

	* dialogs/gedit-preferences.glade2: s/Tabs/Tab Stops and 
	s/Tabs width/Tab width  and added a comment for translators (fixes 
	bug #131419: l10n: Refer to tabulators as "tabulators", not "tabs".)

2004-12-13  Paolo Maggi  <paolo@gnome.org>

	Fixed bug #130748: Auto save settings are not reflecting immediately

	* gedit-document.c (gedit_document_init)
	(gedit_document_set_readonly) (gedit_document_real_loaded)
	(gedit_document_auto_save)(gedit_document_save) 
	(gedit_document_save_as):  use new auto_save and auto_save_interval 
	member variable. 
	(gedit_document_enable_auto_save): new function 
	(gedit_document_set_auto_save_interval): new function 
	(gedit_document_load_from_stdin): fixed a "typo" while checking the encoding

	* gedit-document.h: Added prototype for	gedit_document_enable_auto_save (), 
	and gedit_docuent_set_auto_save_interval ().

	* gedit-prefs-manager-app.c (gedit_prefs_manager_app_init)
	(gedit_prefs_manager_auto_save_changed): notifies when auto save is 
	enabled and/or auto save interval is changed.
	(gedit_prefs_manager_undo_changed): fixed a mem leak

2004-12-13  Paolo Maggi  <paolo@gnome.org>
