@@ -1,3 +1,8 @@
+2005-01-10  Paolo Maggi  <paolo@gnome.org>
+
+	* recent-files/egg-recent-model.c: sync to latest
+	libegg.
+
 2005-01-08  Paolo Maggi  <paolo@gnome.org>
 
 	* dialogs/gedit-preferences-dialog.c
@@ -14,7 +19,6 @@
 	* gedit-prefs-manager.h: ditto
 
 	* gedit-view.c (gedit_view_init): ditto
-
 
 2005-01-07  Paolo Maggi  <paolo@gnome.org>
 
